@@ -24,7 +24,7 @@
 #define OM_HGUARD_NET_DATABASE_H
 
 #include "config.h"
-#include <memory>  // auto_ptr
+#include "autoptr.h"  // auto_ptr
 #include "omdebug.h"
 #include "database.h"
 #include "netclient.h"
